2011-02-23  Joseph Pecoraro  <joepeck@webkit.org>

Reviewed by Timothy Hatcher.

LayoutTests:

    2011-02-23  Joseph Pecoraro  <joepeck@webkit.org>

            All Console Messages should be passed to ChromeClients.
            https://bugs.webkit.org/show_bug.cgi?id=54926

            Passing more message types to the ChromeClient allows
            some more messages to get output during tests. Specifically
            HTML, XML, and Other message types.

            * inspector/audits/audits-panel-functional.html: correct a legitimate HTML parse error.
            * http/tests/security/cross-origin-xsl-BLOCKED-expected.txt:
            * http/tests/security/mixedContent/insecure-css-in-main-frame-expected.txt:
            * http/tests/security/mixedContent/insecure-iframe-in-main-frame-expected.txt:
            * http/tests/security/mixedContent/insecure-image-in-main-frame-expected.txt:
            * http/tests/security/mixedContent/insecure-plugin-in-iframe-expected.txt:
            * http/tests/security/mixedContent/insecure-script-in-iframe-expected.txt:
            * http/tests/security/mixedContent/redirect-http-to-https-iframe-in-main-frame-expected.txt:
            * http/tests/security/mixedContent/redirect-http-to-https-script-in-iframe-expected.txt:
            * http/tests/security/mixedContent/redirect-https-to-http-iframe-in-main-frame-expected.txt:
            * http/tests/security/xss-DENIED-xml-external-entity-expected.txt:
            * http/tests/security/xss-DENIED-xsl-document-expected.txt:
            * http/tests/security/xss-DENIED-xsl-external-entity-expected.txt:
            * platform/mac/fast/xsl/xslt-mismatched-tags-in-xslt-expected.txt:
            * platform/mac/fast/xsl/xslt-missing-namespace-in-xslt-expected.txt:
            * platform/mac/http/tests/inspector/console-websocket-error-expected.txt:

Source/WebCore:

    2011-02-23  Joseph Pecoraro  <joepeck@webkit.org>

            All Console Messages should be passed to ChromeClients.
            https://bugs.webkit.org/show_bug.cgi?id=54926

            Do not filter the message type here, allow clients
            to filter and deal with the different message types.

            * page/Console.cpp:
            (WebCore::Console::addMessage):

Source/WebKit/mac:

    2011-02-23  Joseph Pecoraro  <joepeck@webkit.org>

            All Console Messages should be passed to ChromeClients.
            https://bugs.webkit.org/show_bug.cgi?id=54926

            Add a new private UIDelegate method, -webView:addMessageToConsole:withSource:,
            which supersedes -webView:addMessageToConsole if it exists. The new delegate
            does not filter to only JavaScript originated console messages. The old
            delegate is left around for clients that expect filtered messages, like
            DashCode and older versions of Safari.

            The dictionary message passed to the delegate now includes more information
            about the message source, type, and level.

            * WebCoreSupport/WebChromeClient.mm:
            (stringForMessageSource):
            (stringForMessageType):
            (stringForMessageLevel):
            (WebChromeClient::addMessageToConsole):
            * WebView/WebUIDelegatePrivate.h:

Tools:

    2011-02-23  Joseph Pecoraro  <joepeck@webkit.org>

            All Console Messages should be passed to ChromeClients.
            https://bugs.webkit.org/show_bug.cgi?id=54926

            Update DumpRenderTree's UIDelegate to use the new console message delegate.

            * DumpRenderTree/mac/UIDelegate.mm:
            (-[UIDelegate webView:addMessageToConsole:withSource:]):

Canonical link: https://commits.webkit.org/69958@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80061 268f45cc-cd09-0410-ab3c-d52691b4dbfc